[gd_scene load_steps=17 format=3 uid="uid://cp6hkrxr23xk6"]

[ext_resource type="Script" path="res://addons/madtalk/components/DialogNode.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://sks6j6y53n1k" path="res://addons/madtalk/components/DialogNodeItem_message.tscn" id="2"]
[ext_resource type="Script" path="res://addons/madtalk/components/resources/DialogNodeItemData.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://0l1emjk1cyiy" path="res://addons/madtalk/images/icon_options.png" id="4"]
[ext_resource type="Texture2D" uid="uid://xt0wkyrex027" path="res://addons/madtalk/images/icon_plus.png" id="5"]
[ext_resource type="StyleBox" uid="uid://dgwdu67tftiqs" path="res://addons/madtalk/components/resources/NodeStyle.tres" id="6"]
[ext_resource type="FontFile" path="res://addons/madtalk/fonts/FreeSans.tres" id="7"]
[ext_resource type="PackedScene" uid="uid://y6s6jwiawub6" path="res://addons/madtalk/components/DialogNodeItem_option.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://bjmg67jkhsynh" path="res://addons/madtalk/components/DialogNodeItem_condition.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://vkj7uamlpxxp" path="res://addons/madtalk/components/DialogNodeItem_effect.tscn" id="10"]
[ext_resource type="Texture2D" uid="uid://dqt1wi0i1aqol" path="res://addons/madtalk/images/icon_effect.png" id="11"]
[ext_resource type="Texture2D" uid="uid://200bqpuqfn6m" path="res://addons/madtalk/images/icon_condition.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dxgulu8lvnwrr" path="res://addons/madtalk/images/icon_x.png" id="13"]
[ext_resource type="Texture2D" uid="uid://u746x6ecjfx5" path="res://addons/madtalk/images/icon_message.png" id="14"]

[sub_resource type="Theme" id="1"]
GraphNode/constants/title_offset = 22
GraphNode/icons/close = ExtResource("13")

[sub_resource type="Resource" id="2"]
script = ExtResource("3")
item_type = 0
connected_to_id = -1
message_speaker_id = "mr_name"
message_speaker_variant = ""
message_voice_clip = ""
message_text = "Hello world"
message_hide_on_end = 0
condition_type = 0
condition_values = [50]
effect_type = 0
effect_values = []

[node name="DialogNode" type="GraphNode"]
offset_left = 250.0
offset_top = 130.0
offset_right = 610.0
offset_bottom = 370.0
theme = SubResource("1")
theme_override_colors/title_color = Color(1, 1, 1, 1)
theme_override_colors/resizer_color = Color(1, 1, 1, 1)
theme_override_constants/separation = 0
theme_override_fonts/title_font = ExtResource("7")
theme_override_styles/frame = ExtResource("6")
theme_override_styles/selected_frame = ExtResource("6")
title = "0"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 0.501961, 0, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1")

[node name="TopBar" type="Control" parent="."]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="BtnAdd" type="TextureButton" parent="TopBar"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -8.0
offset_right = -28.0
offset_bottom = 8.0
texture_normal = ExtResource("5")

[node name="BtnOptions" type="TextureButton" parent="TopBar"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.0
offset_right = -4.0
offset_bottom = 8.0
texture_normal = ExtResource("4")

[node name="AddMenu" type="PopupMenu" parent="TopBar"]
size = Vector2i(128, 100)
item_count = 3
item_0/text = "Message"
item_0/icon = ExtResource("14")
item_0/id = 0
item_1/text = "Condition"
item_1/icon = ExtResource("12")
item_1/id = 1
item_2/text = "Effect"
item_2/icon = ExtResource("11")
item_2/id = 2

[node name="DialogRemove" type="ConfirmationDialog" parent="TopBar"]
initial_position = 2
size = Vector2i(386, 109)
popup_window = true
min_size = Vector2i(386, 109)
dialog_text = "
    Are you sure you want to remove this item?    "

[node name="DialogNodeItem_message" parent="." instance=ExtResource("2")]
layout_mode = 2
data = SubResource("2")

[node name="DialogNodeItem_condition" parent="." instance=ExtResource("9")]
layout_mode = 2

[node name="DialogNodeItem_effect" parent="." instance=ExtResource("10")]
layout_mode = 2

[node name="DialogNodeItem_option" parent="." instance=ExtResource("8")]
layout_mode = 2

[connection signal="dragged" from="." to="." method="_on_DialogNode_dragged"]
[connection signal="pressed" from="TopBar/BtnAdd" to="." method="_on_BtnAdd_pressed"]
[connection signal="pressed" from="TopBar/BtnOptions" to="." method="_on_BtnOptions_pressed"]
[connection signal="id_pressed" from="TopBar/AddMenu" to="." method="_on_AddMenu_id_pressed"]
[connection signal="confirmed" from="TopBar/DialogRemove" to="." method="_on_DialogRemove_confirmed"]
